syntax = "proto3";

package tags;

option go_package = "proto;tags";

service Tags {
	rpc Add(AddRequest) returns (AddResponse) {}
	rpc Remove(RemoveRequest) returns (RemoveResponse) {}
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
}

message Tag {
	string type = 1;
	string slug = 2;
	string title = 3;
	string description = 4;
	int64 count = 5;
}

message AddRequest {
	string resourceID = 1;
	string type = 2;
	string title = 3;
	int64 resourceCreated = 4;
}

message AddResponse {
}

message RemoveRequest {
	string resourceID = 1;
	string type = 2;
	string title = 3;
}

message RemoveResponse {
}

message UpdateRequest {
	string type = 1;
	string title = 2;
	string description = 3;
}

message UpdateResponse {
}

// ListRequest: list either by resource id or type.
// Optionally filter by min or max count.
message ListRequest{
	string resourceID = 1;
	string type = 2;
	int64 minCount = 3;
	int64 maxCount = 4;
}

message ListResponse{
	repeated Tag tags = 1;
}